--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         width: 100%;
         height: 100%;
         background-image: url('https://raw.githubusercontent.com/annaschonarth95/Salesforce-Assets/main/login-frame.jpg');
-        background-size: cover;
+        background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
       }
