--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Login Right Frame</title>
+    <title>Salesforce Login Right Frame</title>
+
     <style>
         html, body {
             margin: 0;
             padding: 0;
             height: 100%;
-            background-color: #f4f6f9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-color: #f4f6f9; /* Hintergrundfarbe für eventuelle Ränder */
         }
 
-        .img-wrapper {
+        /* Container füllt die gesamte rechte Frame-Höhe */
+        .right-frame {
             width: 100%;
             height: 100%;
-            overflow: hidden;
-        }
+            background-image: url('https://raw.githubusercontent.com/annaschonarth95/Salesforce-Assets/main/login-frame.jpg');
 
-        .img-wrapper img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+            /* Wichtig: komplettes Bild sichtbar, niemals beschnitten */
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     </style>
 </head>
+
 <body>
-    <div class="img-wrapper">
-        <img src="https://raw.githubusercontent.com/annaschonarth95/Salesforce-Assets/main/login-frame.jpg">
-    </div>
+    <div class="right-frame"></div>
 </body>
 </html>
