--- a/index.html
+++ b/index.html
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
-<html lang="de">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <title>Salesforce Login Right Frame – Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>Login Right Frame</title>
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background-color: #f4f6f9;
-        }
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color: #f4f6f9;
+      }
 
-        /* Rechte Login-Spalte simulieren */
-        .right-frame {
-            width: 100%;
-            height: 100vh;
-
-            /* Dein Bild */
-            background-image: url("https://raw.githubusercontent.com/annaschonarth95/Salesforce-Assets/main/login-frame.jpg");
-
-            /* Bild komplett anzeigen, nie beschneiden */
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-
-            /* Falls Seitenverhältnis nicht passt: Ränder in UI-Farbe */
-            background-color: #f4f6f9;
-        }
+      .bg {
+        width: 100%;
+        height: 100%;
+        background-image: url('https://raw.githubusercontent.com/annaschonarth95/Salesforce-Assets/main/login-frame.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
     </style>
-</head>
-
-<body>
-    <div class="right-frame"></div>
-</body>
+  </head>
+  <body>
+    <div class="bg"></div>
+  </body>
 </html>
